# firehose-multiversx

./: .gitignore  .goreleaser.yml  .sfreleaser  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.bundle  README.md  build.rs  go.mod  go.sum  substreams.yaml
.github/workflows/: docker.yml  main.yml
cmd/firemultiversx/: main.go
cmd/firemultiversx/cli/: constants.go  firehose.go  main.go  node.go  reader-node-stdin.go  (+3 more)
codec/: console_reader.go  console_reader_test.go
codec/testdata/: full.firelog  full.firelog.golden.json
devel/: firemultiversx
devel/observing-squad/: external.toml  run.sh
devel/standard/: standard.yaml  start.sh
devel/stdin/: start.sh  stdin.yaml
integration-tests/: README.md  blockReader.go  go.mod  go.sum  headerChecker.go  main.go  metaChecker.go  shardChecker.go  txCreator.go  wallet.go
integration-tests/scripts/: exporter-node.sh  firehose-connector.sh  firehose-node.sh  integration-test.sh  local-testnet.sh  shard-meta-tests.sh
nodemanager/: logging.go  superviser.go
pb/: generate.sh  last_generate.txt
proto/: buf.yaml
scripts/: blockReader.go  checker.go  checkerMeta.go  checkerShard.go  go.mod  go.sum  integration-test.sh  local-testnet.sh  main.go  metaChecker.go  shard-meta-tests.sh  shardChecker.go  txCreator.go  wallet.go
src/: lib.rs
src/pb/: guardians.rs  mod.rs  outportBlock.rs  proto.rs  sf.multiversx.type.v1.rs  type_pb.rs
substreams/: substreams.yaml
substreams-example/: .gitignore  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  schema.graphql  subgraph.yaml  substreams.yaml
substreams-example/src/: decode.rs  lib.rs  main.rs  utils.rs
substreams-example/src/pb/: mod.rs  pbmultiversx.rs  sf.multiversx.type.v1.rs
tools/: blocks.go  check.go  logging.go
tools/docker/: motd_node_manager
tools/firemultiversx/: 99-firehose.sh  motd_generic  motd_node_manager
tools/multiversx/: 99-firehose.sh
types/: block.go  decoder.go  go.mod  go.sum
types/pb/: generate.sh  last_generate.txt
(+9 files in other folders)
