[package]
name = "firehose-multiversx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11.9"
protobuf = "2.0.0"
substreams = "0.5"

[build-dependencies]
prost-build = "0.11.9"
protoc-rust = "2"
