[package]
name = "substreams-multiversx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
prost = "0.11"
substreams = "0.5"
substreams-entity-change = "1.3"
anyhow = "1.0"
hex = { version = "0.4", default-features = false }
